--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2021-01-20 qua 18:38
+% Created 2021-01-20 qua 19:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
@@ -33,9 +33,12 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage[none]{hyphenat} % Avoid hyphenization
 \usepackage[right=3cm,left=3cm, footskip=0.25in]{geometry}
 \addbibresource{refs.bib}
-\usepackage{svg, caption, multirow, booktabs, setspace, indentfirst}
+\usepackage{svg, caption, multirow, booktabs, setspace, indentfirst, authblk}
 \usepackage[english]{babel}
-\author{Gabriel Petrini, Lucas Teixeira}
+\author[1]{Lucas Teixeira}
+\affil[1]{Assistent Professor at University of Campinas (Brazil)} % Author affiliation
+\author[2]{Gabriel Petrini}
+\affil[2]{PhD Student at University of Campinas (Brazil)} % Author affiliation
 \date{\today}
 \title{Long-run effective demand and residential investment: a Sraffian supermultiplier based analysis}
 \begin{document}
@@ -60,7 +63,7 @@ Although simple, our numerical simulations are capable to reproduce some stylize
 
 
 \section{Introduction}
-\label{sec:orga177153}
+\label{sec:orgd85536a}
 \label{sec:introduction}
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures are given a secondary role \cite{brochier_macroeconomics_2017}.
 More than a decade after the Great Recession (2008-9), this is still the case for residential investment which continues to receive sparse and unsystematic attention by the literature \cites{caverzasi_stock-flow_2013}{nikolaidi_minsky_2017}.
@@ -95,7 +98,7 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical motivation}
-\label{sec:orgaa5e0f1}
+\label{sec:org1960da5}
 \label{sec:empirical}
 A growing body of empirical literature on demand-led growth has evaluated the role of NCC autonomous expenditures.
 \textcite{freitas_pattern_2013} present a growth accounting decomposition for Brazil from 1970 to 2005 and report the relevance of those expenditures in describing Brazilian GDP growth rate.
@@ -131,7 +134,7 @@ On the following subsection, we present some residential investment-related styl
 Next, we analyze the connection between residential investment, real estate inflation and mortgage interest rate during the U.S. housing bubble episode.
 
 \subsection{Residential investment stylized facts}
-\label{sec:org53a9d64}
+\label{sec:orgfc9d826}
 
 As discussed before, both \textcites{green_follow_1997}{leamer_housing_2007} made it clear how important this particular expenditure is to USA business cycle. In this subsection, we show some residential investment stylized facts for the US in more detail.
 
@@ -165,7 +168,7 @@ This pattern is more evident in the 1970-75, 1982-91 and in the Great Recession.
 \end{figure}
 
 \subsection{Housing bubble and residential investment}
-\label{sec:org0be901e}
+\label{sec:org8783784}
 \label{sec_own}
 Once we understand the relevance of residential investment to describe the U.S. business cycle, it is important to investigate its determinants.
 There are at some key variables to assess the residential investment behavior.
@@ -201,10 +204,10 @@ In the next section, we build a fully specified parsimonious Sraffian supermulti
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:orge9d29f5}
+\label{sec:orgb0e4fcf}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:orgeea8f5a}
+\label{sec:org2a03ffa}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed business capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -343,7 +346,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:org90ab3b0}
+\label{sec:org8a739dc}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Firms total profits (\(FT\), Equation \ref{_FT}) are a residual between sales (\(Y\)) and total wages (\(W\)).
@@ -407,7 +410,7 @@ r_n = r_g - r_l\cdot\frac{L_{f_{-1}}}{K_f}
 where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 
 \subsection{Banks}
-\label{sec:org2f65a5f}
+\label{sec:org048d8d0}
 
 As in most part of SFC literature, banks do not have an active role in this model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -444,10 +447,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:org3bd0070}
+\label{sec:orgc70dfd5}
 
 \subsubsection{Workers}
-\label{sec:orgc5b5f5f}
+\label{sec:orgdc36b92}
 
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
@@ -473,7 +476,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection{Capitalists}
-\label{sec:orgfb93484}
+\label{sec:org705b932}
 
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
@@ -571,11 +574,11 @@ In the next Section, we analyze the dynamics from short- to long-run equilibria.
 
 
 \section{From short- to long-run equilibria}
-\label{sec:org51a09b7}
+\label{sec:org3486ad2}
 \label{sec:runs}
 In this Section, we show the implications of residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the traverse and then to the long-run equilibrium (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:orgd52cbc7}
+\label{sec:org264ed71}
 \label{short}
 
 In this model, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{_Ct}) and both types of investment (equation \ref{_It}). 
@@ -614,7 +617,7 @@ k = \frac{(1-R)\cdot (1-h_t - \omega)}{h_t + (1-R)\cdot (1-h_t - \omega)}
 \end{equation}
 
 \subsection{Traverse and long-run equilibrium}
-\label{sec:orgf3c0070}
+\label{sec:orgfe1323f}
 \label{long}
 
 In this subsection, we present traverse and long-run equilibrium equations.
@@ -731,7 +734,7 @@ m\textsuperscript{\(\star\)} = mo\textsuperscript{\(\star\)}\(\cdot\) k\textsupe
 
 
 \section{Numerical simulations}
-\label{sec:org50ac7c9}
+\label{sec:org52876c5}
 \label{sec:Experiments}
 \label{sec:Experiments}
 In this Section, we present the results of the following numerical experiments: 
@@ -744,7 +747,7 @@ Our first experiment assess if income distribution has a level effect on output 
 Real estate inflation increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last simulation aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:org88f2ba9}
+\label{sec:org8a01e66}
 \label{sec:Exp1}
 
 A wage-share decrease has permanent negative impact on output level --- due to changes in the supermultiplier --- and temporary negative effects on degree of capacity utilization (see Figure \ref{fig:results_1} A).
@@ -777,7 +780,7 @@ Therefore, as profits distribution policy remains the same, firms require less e
 
 
 \subsection{Real estate inflation increase}
-\label{sec:org99f2556}
+\label{sec:orge6ef75f}
 \label{sec:Exp2}
 
 
@@ -805,7 +808,7 @@ GDP grows faster than residential investment.
 Thus, both residential investment share on GDP and degree of capacity  utilization decrease.
 In other words, both autonomous expenditures share on GDP and houses share on real assets decline as a result of the already described non-residential investment positive reaction.
 \subsection{Interest rate increase}
-\label{sec:org1b8254a}
+\label{sec:orgfcdcdf3}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -864,7 +867,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 \subsection{Plugging real data}
-\label{sec:orgff43d0c}
+\label{sec:orga4c54d9}
 \label{real_sim}
 
 Finally, we include houses own rate of interest data  discussed in section \ref{sec:empirical} (see Figure \ref{propria_investo}) into our model.
@@ -894,7 +897,7 @@ Together these results provide a first step towards the connection between house
 
 
 \section{Concluding remarks}
-\label{sec:orgbd1646b}
+\label{sec:orgc4f90d3}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is the introduction of residential investment determined by houses own rate of interest in a SSM-SFC model.
@@ -918,23 +921,23 @@ Nevertheless, this is a little step in a wider research agenda on the role of re
 
 
 \section*{Acknowledgments}
-\label{sec:org477d7eb}
+\label{sec:orgbc8f148}
 The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano, Stefano Di Bucchianico  and Fabrício Pitombo Leite for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, 46th EEA Annual Conference and EAEPE 2020 Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:org56d480e}
+\label{sec:org267a0e6}
 No potential conflict of interest was reported by the authors.
 
 
 \section*{References}
-\label{sec:orga14824f}
+\label{sec:org7e53425}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Numerical appendix}
-\label{sec:org16ca2d9}
+\label{sec:org9fcc935}
 \label{append:Data}
 
 
@@ -947,7 +950,7 @@ No potential conflict of interest was reported by the authors.
 \end{table}
 
 \section{Sensibility analysis}
-\label{sec:org8993025}
+\label{sec:orga2f7b7c}
 \label{append:Sensib}
 \begin{table}[H]
 \caption{Effect of individual parameters\\on model stability}
