--- a/Articles/VECM/Petrini_etal_2020.org
+++ b/Articles/VECM/Petrini_etal_2020.org
@@ -1,9 +1,9 @@
 #+TITLE: Long-run effective demand and residential investment: a Sraffian supermultiplier based analysis
-#+AUTHOR: Gabriel Petrini, Lucas Teixeira
-#+EMAIL: gpetrinidasilveira@gmail.com, lucas.teixeira@unicamp.br
+#+AUTHOR: Lucas Teixeira \and Gabriel Petrini
+#+EMAIL: lucas.teixeira@unicamp.br \and gpetrinidasilveira@gmail.com
 #+OPTIONS: toc:nil
 #+LATEX_HEADER: \addbibresource{ref.bib}
-#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable}
+#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable, authblk}
 #+LATEX_HEADER: \newcolumntype{b}{>{\hsize=2.3\hsize}X}
 #+LATEX_HEADER: \newcolumntype{s}{>{\hsize=.45\hsize}X}
 #+LATEX_HEADER: \newcolumntype{m}{>{\hsize=.9\hsize}X}
