--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.org
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.org
@@ -11,9 +11,9 @@
 #+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, setspace, indentfirst, authblk}
 #+LATEX_HEADER: \usepackage[english]{babel}
 #+LATEX_HEADER:\author[1]{Lucas Teixeira}
-#+LATEX_HEADER:\affil[1]{Assistent Professor at University of Campinas (Brazil)} % Author affiliation
+#+LATEX_HEADER:\affil[1]{Assistent Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
 #+LATEX_HEADER:\author[2]{Gabriel Petrini}
-#+LATEX_HEADER:\affil[2]{PhD Student at University of Campinas (Brazil)} % Author affiliation
+#+LATEX_HEADER:\affil[2]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
 #+PROPERTY: header-args:python :python /usr/bin/python3 :exports none :eval never-export
 
 #+BEGIN_abstract
@@ -34,12 +34,12 @@ Although simple, our numerical simulations are capable to reproduce some stylize
 #+LATEX: \setlength{\parskip}{1em}
 
 
-* Introduction
+* Introduction :noexport:
 #+LATEX: \label{sec:introduction}
 #+INCLUDE: "Introduction.org"
 
 
-* Empirical motivation
+* Empirical motivation :noexport:
 #+LATEX: \label{sec:empirical}
 #+INCLUDE: "Empirical.org"
 
@@ -50,43 +50,43 @@ Although simple, our numerical simulations are capable to reproduce some stylize
 
 
 
-* A Sraffian supermultiplier SFC model with residential investment
+* A Sraffian supermultiplier SFC model with residential investment :noexport:
 #+LATEX: \label{sec:Model}
 #+INCLUDE: "Model.org"
 
 
 
-* From short- to long-run equilibria
+* From short- to long-run equilibria :noexport:
 #+LATEX: \label{sec:runs}
 #+INCLUDE: "Analytical.org"
 
 
-* Numerical simulations
+* Numerical simulations :noexport:
 #+LATEX: \label{sec:Experiments}
 #+INCLUDE: "Simulation.org"
 
 
 
-* Concluding remarks
+* Concluding remarks :noexport:
 #+LATEX: \label{sec:Conclusion}
 #+INCLUDE: "Conclusion.org"
 
 
-* Acknowledgments
+* Acknowledgments :noexport:
   :PROPERTIES:
   :UNNUMBERED: t
   :END:
 
 #+LATEX:  The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano, Stefano Di Bucchianico  and Fabrício Pitombo Leite for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, 46th EEA Annual Conference and EAEPE 2020 Conference. Any remaining errors are, of course, our own.
 
-* Disclosure statement
+* Disclosure statement :noexport:
   :PROPERTIES:
   :UNNUMBERED: t
   :END:
 No potential conflict of interest was reported by the authors.
 
 
-* References
+* References :noexport:
   :PROPERTIES:
   :UNNUMBERED: t
   :END:
@@ -96,7 +96,7 @@ No potential conflict of interest was reported by the authors.
 
 #+Latex: \appendix
 
-* Analytical TODOs                                                 :noexport:
+* Analytical TODOs :noexport:
 
 ** Residuals
 
@@ -417,7 +417,7 @@ Since capitalists' loans and mortgage to house ratios ($\ell^{\star}_{k}$ and $m
 \frac{-\gamma_F\cdot \phi_1\cdot (1+\pi)\cdot(r_g^\star + r_m)}{((1+\pi)\cdot (\gamma_F\cdot r_m - \phi_0) + \phi_1\cdot (r_m -\pi))^2} < 0
 \end{equation}
 
-* Numerical appendix
+* Numerical appendix :noexport:
  #+LATEX: \label{append:Data}
 
 
@@ -442,7 +442,7 @@ Since capitalists' loans and mortgage to house ratios ($\ell^{\star}_{k}$ and $m
 \end{table}
 #+end_export
 
-* Sensibility analysis
+* Sensibility analysis :noexport:
 #+LATEX: \label{append:Sensib}
 
 *** Config                                                           :ignore:
