Atualizando documentos Fapesp. Plano de Gestão de Dados.

--- a/Fapesp/Documentos/SumulaCurricular_202101.tex
+++ b/Fapesp/Documentos/SumulaCurricular_202101.tex
@@ -35,7 +35,7 @@
 	author = {Petrini, Gabriel and Teixeira, Lucas},
 	year = {2020}
 }
-	
+
 @inproceedings{petrini_long_2019,
 		address = {Berlin},
 		title = {Long {Run} {Effective} {Demand}: {Introducing} {Residential} {Investment} in a {Sraffian} {Supermultiplier} {Stock}-{Flow} {Consistent} {Model}},
@@ -59,7 +59,7 @@
 	\rule{\textwidth}{1.2pt}
 	\textbf{Súmula Curricular}\\
 	\Large\textbf{Gabriel Petrini da Silveira}\\
-	Julho de 2020
+	Janeiro de 2021
 	\rule{\textwidth}{1.2pt}
 \end{center}
 
@@ -128,10 +128,13 @@ NADA A DECLARAR
 	\item 2017: Programa de Apoio Didático (PAD) - Economia Matemática III
 	\item 2017: Programa de Apoio Didático (PAD) - Macroeconomia II
 	\item 2020: Programa de Estágio de Docência (PED) - Macroeconomia III
+	\item 2020: Programa de Estágio de Docência (PED) - Métodos de Análise Econômica III
 	\item Primeiro lugar na ANPEC 2018 na classificação de concorrência ampla para mestrado em teoria econômica do Instituto de Economia Unicamp.
 	\item Primeiro lugar no processo seletivo de doutorado em teoria econômica do Instituto de Economia Unicamp (ampla concorrência)
-	\item Manutenção e atualização de um pacote para solução e simulação de sistemas lineares escrito em \textit{python 3}. Disponível em \url{https://github.com/gpetrini/pysolve3}
+  \item Manutenção e atualização de um pacote para solução e simulação de sistemas lineares escrito em \textit{python 3}. Disponível em \url{https://github.com/gpetrini/pysolve3}
 	\item Contribuidor no Centro de Estudos de Conjuntura e Política Econômica (Cecon/Unicamp)
+  \item \textbf{Orientação em adanamento:} Lorena Salces Dourado. DESIGUALDADE SOB O RED SCARE: UM ESTUDO DOS CONDICIONANTES GEOPOLÍTICOS E INSTITUCIONAIS DA DISTRIBUIÇÃO DE RENDA NOS PAÍSES CENTRAIS DURANTE A GUERRA FRIA. Início: 2021. Trabalho de Conclusão de Curso (Graduação em Ciências Econômicas) - Universidade Estadual de Campinas. (Orientador).
+  \item \textbf{Orientação em andamento:} Felipe Messias Barros. Padrões de Financeirização Brasileiros: Particularidades, Momentos e Ruptura. Início: 2021. Trabalho de Conclusão de Curso (Graduação em Ciências Econômicas) - Universidade Estadual de Campinas. (Orientador).
 \end{itemize}
 
 \end{document}
